# gregchess

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CompactPiece.cpp  CompactPiece.h  Coord.cpp  Coord.h  GameState.cpp  GameState.h  Move.cpp  Move.h  common.h  main.cpp
src/ui/: Board.cpp  Board.h  ColoredPiece.cpp  ColoredPiece.h  Game.cpp  Game.h  Renderable.cpp  Renderable.h  Window.cpp  Window.h
